--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,7 +17,7 @@
     <container>
       <div class="main-top">
         <div class="main-img">
-          <img class="main-img-background" src="./css/img/main-top.jpg" />
+          <img class="main-img-background" src="./css/img/test1.jpg" />
         </div>
         <div class="main-content">
           <div class="main-content-title">
@@ -45,44 +45,16 @@
         </div>
         <div class="main-mid-service">
           <div class="service">
-            <img src="./css/img/service1.jpg" />
-            <div class="service-content">
-              <div>의뢰 온오프</div>
-              <div>
-                작품별 온오프 기능으로<br />
-                스케줄 관리를 수월하게 해보세요.
-              </div>
-            </div>
+            <img src="./css/img/service-test1.png" />
           </div>
           <div class="service">
-            <img src="./css/img/service2.jpg" />
-            <div class="service-content">
-              <div>믿고 맡기는 의뢰</div>
-              <div>
-                의뢰 이후 취소되지 않도록<br />
-                아트마켓은 실시간 모니터링 합니다.
-              </div>
-            </div>
+            <img src="./css/img/service-test2.png" />
           </div>
           <div class="service">
-            <img src="./css/img/service3.jpg" />
-            <div class="service-content">
-              <div>간편한 문의</div>
-              <div>
-                아트마켓의 실시간 채팅으로<br />
-                손쉽고 간편하게 소통할 수 있어요.
-              </div>
-            </div>
+            <img src="./css/img/service-test3.png" />
           </div>
           <div class="service">
-            <img src="./css/img/service4.jpg" />
-            <div class="service-content">
-              <div>안전거래 대금</div>
-              <div>
-                결제하신 금액은<br />
-                아트마켓에서 안전하게 관리합니다.
-              </div>
-            </div>
+            <img src="./css/img/service-test4.png" />
           </div>
         </div>
       </div>
