--- a/src/main/resources/static/after-join.html
+++ b/src/main/resources/static/after-join.html
@@ -21,19 +21,23 @@
         <img class="login-to-join-background-img" src="./css/img/test1.jpg" />
         <div class="after-join-content">
           <div class="join-ing">
-            <img src="./css/icon/ingChecked.png" />
+            <img class="join-ing-img" src="./css/icon/ingChecked.png" />
             <div class="join-ing-line"></div>
-            <img src="./css/icon/ingChecked.png" />
+            <img class="join-ing-img" src="./css/icon/ingChecked.png" />
             <div class="join-ing-line"></div>
-            <img src="./css/icon/ingChecked.png" />
+            <img class="join-ing-img" src="./css/icon/ingChecked.png" />
           </div>
           <div class="after-join-identity-title">
             <div class="after-join-identity-title-list">
               <img src="./css/icon/join-identity-title-img.png" />
-              <div>회원유형 선택</div>
+              <div class="after-join-identity-title-list-main">
+                회원유형 선택
+              </div>
             </div>
             <div class="after-join-identity-title-list">
-              해당하는 내용의 가입할 유형을 선택해주세요.
+              <div class="after-join-identity-title-list-sub">
+                해당하는 내용의 가입할 유형을 선택해주세요.
+              </div>
             </div>
           </div>
           <div class="after-join-identity">
