--- a/bin/main/static/myfage.html
+++ b/bin/main/static/myfage.html
@@ -10,10 +10,27 @@
     <link rel="stylesheet" href="./css/nav.css" />
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/all.css" />
+    <link rel="stylesheet" href="./css/myfage.css" />
   </head>
   <body>
     <nav></nav>
-    <container></container>
+    <container>
+      <div class="myfage-nav">
+        <div class="myfage-nav-content">
+          <div class="myfage-nav-profile"></div>
+          <div class="myfage-nav-profile-menu">
+            <div id="myfage-nav-profile-img-mod">프로필이미지 수정하기</div>
+            <div id="myfage-nav-profile-intro-mod">소개글 수정하기</div>
+            <div id="myfage-nav-profile-identity-mod">회원전환 수정하기</div>
+          </div>
+        </div>
+        <div>
+          <img src="./css/img/myfage-nav-img.png" />
+        </div>
+      </div>
+      <div class="myfage-mid"></div>
+      <div class="myfage-right"></div>
+    </container>
     <footer></footer>
   </body>
 </html>
