--- a/bin/main/static/join.html
+++ b/bin/main/static/join.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script async src="./js/nav.js"></script>
     <script async src="./js/footer.js"></script>
     <script async src="./js/all.js"></script>
@@ -11,58 +10,73 @@
     <link rel="stylesheet" href="./css/nav.css" />
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/all.css" />
-    <link rel="stylesheet" href="./css/join.css" />
     <link rel="stylesheet" href="./css/login-to-join-backimg.css" />
+    <link rel="stylesheet" href="./css/join.css" />
     <title>회원가입</title>
   </head>
   <body>
     <nav></nav>
-    <container class="login-to-join-container">
+    <container>
       <div class="login-to-join-background">
         <img class="login-to-join-background-img" src="./css/img/test1.jpg" />
-        <div class="join-title">회원가입</div>
-        <div class="join-content">
-          <div class="join-identity">
-            <div id="join-identity-general">일반회원</div>
-            <div id="join-identity-author">작가회원</div>
+        <div class="after-join-content">
+          <div class="join-ing">
+            <img class="join-ing-img" src="./css/icon/ingChecked.png" />
+            <div class="join-ing-line"></div>
+            <img class="join-ing-img" src="./css/icon/ingChecked.png" />
+            <div class="join-ing-line"></div>
+            <img class="join-ing-img" src="./css/icon/ingChecked.png" />
           </div>
-          <div class="join-all-list">
-            <div class="join-list-name">
-              <div>이&nbsp;&nbsp;&nbsp;름</div>
-              <input type="text" class="join-name" />
+          <div class="after-join-identity-title">
+            <div class="after-join-identity-title-list">
+              <img class="after-join-identity-title-list-img" src="./css/icon/join-identity-title-img.png" />
+              <div class="after-join-identity-title-list-main">
+                회원유형 선택
+              </div>
             </div>
-          </div>
-          <div class="join-all-list">
-            <div class="join-list-id">
-              <div>아이디</div>
-              <input type="text" class="join-id" />
-            </div>
-            <div class="join-list-nickname">
-              <div>닉네임</div>
-              <input type="text" class="join-nickname" />
-            </div>
-          </div>
-          <div class="join-all-list">
-            <div class="join-list-password">
-              <div>암&nbsp;&nbsp;&nbsp;호</div>
-              <input type="password" class="join-password" />
-            </div>
-            <div class="join-list-repassword">
-              <div>재입력</div>
-              <input type="password" class="join-repassword" />
+            <div class="after-join-identity-title-list">
+              <div class="after-join-identity-title-list-sub">
+                해당하는 내용의 가입할 유형을 선택해주세요.
+              </div>
             </div>
           </div>
-          <div class="join-all-list">
-            <div class="join-list-phone">
-              <div>휴대폰</div>
-              <input type="text" class="join-phone" />
+          <div class="after-join-identity">
+            <div id="join-identity-general">
+              <img
+                class="join-general-img"
+                src="./css/icon/join-general-checked.png"
+              />
+              <div class="join-general-type-ko">일반유저</div>
+              <div class="join-general-type-en">GENERAL</div>
+              <div class="join-general-list">
+                다양한 작가들의 작품을 보고싶어요
+              </div>
+              <div class="join-general-list">
+                작가님에게 작품을 의뢰하고싶어요
+              </div>
+              <div class="join-general-list">안전한 거래를 하고 싶어요</div>
             </div>
-            <div class="join-list-email">
-              <div>이메일</div>
-              <input type="text" class="join-email" readonly />
+            <div id="join-identity-author">
+              <img
+                class="join-author-img"
+                src="./css/icon/join-author-checked.png"
+              />
+              <div class="join-author-type-ko">작가 유저</div>
+              <div class="join-author-type-en">AUTHOR</div>
+              <div class="join-author-list">내 작품을 판매하고 싶어요.</div>
+              <div class="join-author-list">
+                의뢰인들과 직접 소통하고 싶어요
+              </div>
+              <div class="join-author-list">
+                실시간 작업 현황을 보여주고 싶어요
+              </div>
             </div>
           </div>
-          <input type="button" class="join-btn" value="가입하기" />
+          <input
+            type="button"
+            class="join-identity-btn"
+            value="다&nbsp;&nbsp;&nbsp;&nbsp;음"
+          />
         </div>
       </div>
     </container>
