--- a/bin/main/static/agree.html
+++ b/bin/main/static/agree.html
@@ -9,11 +9,11 @@
     <script async src="./js/footer.js"></script>
     <script async src="./js/all.js"></script>
     <script async src="./js/agree.js"></script>
-    <link rel="stylesheet" href="./css/nav.css" />
-    <link rel="stylesheet" href="./css/footer.css" />
-    <link rel="stylesheet" href="./css/all.css" />
+    <link rel="stylesheet" href="./css/default/nav.css" />
+    <link rel="stylesheet" href="./css/default/footer.css" />
+    <link rel="stylesheet" href="./css/default/all.css" />
     <link rel="stylesheet" href="./css/login-to-join-backimg.css" />
-    <link rel="stylesheet" href="./css/agree.css" />
+    <link rel="stylesheet" href="./css/join/agree.css" />
   </head>
   <body>
     <nav></nav>
