--- a/bin/main/static/join.html
+++ b/bin/main/static/join.html
@@ -7,11 +7,11 @@
     <script async src="./js/footer.js"></script>
     <script async src="./js/all.js"></script>
     <script async src="./js/join.js"></script>
-    <link rel="stylesheet" href="./css/nav.css" />
-    <link rel="stylesheet" href="./css/footer.css" />
-    <link rel="stylesheet" href="./css/all.css" />
+    <link rel="stylesheet" href="./css/default/nav.css" />
+    <link rel="stylesheet" href="./css/default/footer.css" />
+    <link rel="stylesheet" href="./css/default/all.css" />
     <link rel="stylesheet" href="./css/login-to-join-backimg.css" />
-    <link rel="stylesheet" href="./css/join.css" />
+    <link rel="stylesheet" href="./css/join/join.css" />
     <title>회원가입</title>
   </head>
   <body>
@@ -29,7 +29,10 @@
           </div>
           <div class="after-join-identity-title">
             <div class="after-join-identity-title-list">
-              <img class="after-join-identity-title-list-img" src="./css/icon/join-identity-title-img.png" />
+              <img
+                class="after-join-identity-title-list-img"
+                src="./css/icon/join-identity-title-img.png"
+              />
               <div class="after-join-identity-title-list-main">
                 회원유형 선택
               </div>
