--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,9 +8,9 @@
     <script async src="./js/nav.js"></script>
     <script async src="./js/footer.js"></script>
     <script async src="./js/index.js"></script>
-    <link rel="stylesheet" href="./css/nav.css" />
-    <link rel="stylesheet" href="./css/footer.css" />
-    <link rel="stylesheet" href="./css/all.css" />
+    <link rel="stylesheet" href="./css/default/nav.css" />
+    <link rel="stylesheet" href="./css/default/footer.css" />
+    <link rel="stylesheet" href="./css/default/all.css" />
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
