--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -9,9 +9,9 @@
     <script async src="./js/footer.js"></script>
     <script async src="./js/login.js"></script>
     <script async src="./js/all.js"></script>
-    <link rel="stylesheet" href="./css/nav.css" />
-    <link rel="stylesheet" href="./css/footer.css" />
-    <link rel="stylesheet" href="./css/all.css" />
+    <link rel="stylesheet" href="./css/default/nav.css" />
+    <link rel="stylesheet" href="./css/default/footer.css" />
+    <link rel="stylesheet" href="./css/default/all.css" />
     <link rel="stylesheet" href="./css/login-to-join-backimg.css" />
     <link rel="stylesheet" href="./css/login.css" />
   </head>
