--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -51,6 +51,26 @@
                 </div>
             </div>
         </div>
+        <div class="detail-bot">
+            <div class="detail-bot-caution">
+                <img class="detail-bot-caution-icon" src="./css/icon/detail-caution.png"/>
+                <div class="detail-bot-caution-title">작가님과 협의가 되었나요?</div>
+                <div class="detail-bot-caution-intro">사전 협의가 되지 않은 의뢰건은 작가가 취소할 수 있습니다.  카카오페이 취소는 영업일기준 3~5일 소요됩니다.</div>
+            </div>
+            <div class="detail-bot-intro">
+                <div class="detail-bot-intro-label">작품 설명</div>
+                <textarea class="detail-bot-intro-value" cols="100" rows="20" readonly></textarea>
+            </div>
+            <div class="detail-bot-img">
+                <div class="detail-bot-img-label">작품 이미지</div>
+                <div class="detail-bot-img-lists">
+                    <img class="detail-bot-img-lists-value" src="./css/img/content1.jpg"/>
+                    <img class="detail-bot-img-lists-value" src="./css/img/content1.jpg"/>
+                    <img class="detail-bot-img-lists-value" src="./css/img/content1.jpg"/>
+                    <img class="detail-bot-img-lists-value" src="./css/img/content1.jpg"/>
+                </div>
+            </div>
+        </div>
     </container>
     <footer></footer>
 </body>
