--- a/bin/main/static/myfage.html
+++ b/bin/main/static/myfage.html
@@ -7,27 +7,26 @@
     <script async src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script async src="./js/nav.js"></script>
     <script async src="./js/footer.js"></script>
-    <link rel="stylesheet" href="./css/nav.css" />
-    <link rel="stylesheet" href="./css/footer.css" />
-    <link rel="stylesheet" href="./css/all.css" />
-    <link rel="stylesheet" href="./css/myfage.css" />
+    <script async src="./js/all.js"></script>
+    <script async src="./js/myfage-nav.js"></script>
+    <script async src="./js/myfage-mid-chat.js"></script>
+    <script async src="./js/myfage-mid-article.js"></script>
+    <script async src="./js/myfage-right-chat.js"></script>
+    <script async src="./js/myfage-right-article.js"></script>
+    <script async src="./js/myfage-nav-click.js"></script>
+    <link rel="stylesheet" href="./css/default/nav.css" />
+    <link rel="stylesheet" href="./css/default/footer.css" />
+    <link rel="stylesheet" href="./css/default/all.css" />
+    <link rel="stylesheet" href="./css/myfage/myfage-nav.css" />
+    <link rel="stylesheet" href="./css/myfage/myfage-mid-chat.css" />
+    <link rel="stylesheet" href="./css/myfage/myfage-right-chat.css" />
+    <link rel="stylesheet" href="./css/myfage/myfage-mid-article.css" />
+    <link rel="stylesheet" href="./css/myfage/myfage-right-article.css" />
   </head>
   <body>
     <nav></nav>
     <container>
-      <div class="myfage-nav">
-        <div class="myfage-nav-content">
-          <div class="myfage-nav-profile"></div>
-          <div class="myfage-nav-profile-menu">
-            <div id="myfage-nav-profile-img-mod">프로필이미지 수정하기</div>
-            <div id="myfage-nav-profile-intro-mod">소개글 수정하기</div>
-            <div id="myfage-nav-profile-identity-mod">회원전환 수정하기</div>
-          </div>
-        </div>
-        <div>
-          <img src="./css/img/myfage-nav-img.png" />
-        </div>
-      </div>
+      <div class="myfage-nav"></div>
       <div class="myfage-mid"></div>
       <div class="myfage-right"></div>
     </container>
