--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -30,25 +30,23 @@
       <div class="detail-mid">
         <div class="detail-mid-left">
           <div class="detail-mid-left-profile-img">
-            <img
-              class="detail-mid-left-profile-img-value"
-              src="./css/img/profile-test.gif"
-            />
+            <img class="detail-mid-left-profile-img-value" src="" />
           </div>
           <div class="detail-mid-left-profile-info">
             <div class="detail-mid-left-profile-info-nickname"></div>
-            <textarea
-              class="detail-mid-left-profile-info-intro"
-              cols="20"
-              rows="2"
-              readonly
-            ></textarea>
+            <div class="detail-mid-left-profile-info-intro">
+              안녕하세요. 작가입니다.
+            </div>
           </div>
         </div>
         <div class="detail-mid-right">
           <div class="detail-mid-right-chat">
             <div class="detail-mid-right-chat-label">
-              먼저 작가님과 가격 및 마감기한을 협의하세요.
+              <img
+                class="detail-mid-right-check-icon"
+                src="./css/icon/ingChecked.png"
+              />
+              <div>먼저 작가님과 가격 및 마감기한을 협의하세요.</div>
             </div>
             <input
               class="detail-mid-right-chat-btn"
@@ -58,13 +56,21 @@
           </div>
           <div class="detail-mid-right-deadline">
             <div class="detail-mid-right-deadline-label">
-              협의 된 마감기한을 선택해주세요.
+              <img
+                class="detail-mid-right-check-icon"
+                src="./css/icon/ingChecked.png"
+              />
+              <div>협의 된 마감기한을 선택해주세요.</div>
             </div>
             <input class="detail-mid-right-deadline-btn" type="date" />
           </div>
           <div class="detail-mid-right-payment">
             <div class="detail-mid-right-payment-label">
-              협의 된 가격을 입력 후 결제해주세요.
+              <img
+                class="detail-mid-right-check-icon"
+                src="./css/icon/ingChecked.png"
+              />
+              <div>협의 된 가격을 입력 후 결제해주세요.</div>
             </div>
             <input class="detail-mid-right-payment-cost" type="text" />
             <input
@@ -130,16 +136,11 @@
           </div>
         </div>
         <div class="detail-bot-intro">
-          <div class="detail-bot-intro-label">작품 설명</div>
-          <textarea
-            class="detail-bot-intro-value"
-            cols="100"
-            rows="20"
-            readonly
-          ></textarea>
+          <div class="detail-bot-intro-label">PRODUCT POINT</div>
+          <div class="detail-bot-intro-value"></div>
         </div>
         <div class="detail-bot-img">
-          <div class="detail-bot-img-label">작품 이미지</div>
+          <div class="detail-bot-img-label">PRODUCT DETAILS</div>
           <div class="detail-bot-img-lists"></div>
         </div>
       </div>
