상품 수정, 삭제 프론트 기능 추가

--- a/src/main/resources/static/myfage.html
+++ b/src/main/resources/static/myfage.html
@@ -12,6 +12,8 @@
     <script async src="./js/myfage-mid-article.js"></script>
     <script async src="./js/myfage-right-chat.js"></script>
     <script async src="./js/myfage-right-article.js"></script>
+    <script defer src="./js/myfage-delete-article.js"></script>
+    <script defer src="./js/myfage-modify-article.js"></script>
     <script async src="./js/myfage-nav-click.js"></script>
     <script async src="./js/chat.js"></script>
     <link rel="stylesheet" href="./css/default/nav.css" />
