상품 소개 글자 변경

--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -142,11 +142,11 @@
             </div>
         </div>
         <div class="detail-bot-intro">
-            <div class="detail-bot-intro-label">PRODUCT POINT</div>
+            <div class="detail-bot-intro-label">PRODUCT DETAIL</div>
             <div class="detail-bot-intro-value"></div>
         </div>
         <div class="detail-bot-img">
-            <div class="detail-bot-img-label">PRODUCT DETAILS</div>
+            <div class="detail-bot-img-label">PORTFOLIO</div>
             <div class="detail-bot-img-lists"></div>
         </div>
     </div>
