--- a/src/main/resources/static/myfage.html
+++ b/src/main/resources/static/myfage.html
@@ -34,99 +34,103 @@
   <body>
     <nav></nav>
     <container>
+
       <div class="myfage-nav"></div>
       <div class="myfage-mid">
-        <!-- -- -->
-        <div class="myfage-mid-order-content">
-          <!-- -- -->
-          <div class="myfage-mid-order-content-nav">
-            <div class="myfage-mid-order-content-type-req">의뢰관리</div>
-            <div class="myfage-mid-order-content-type-art">작업관리</div>
-          </div>
-          <!-- -- -->
-          <div class="myfage-mid-order-content-status">
-            <div class="status-1">
-              <div class="status-1-label">의뢰 신청</div>
-              <div class="status-1-value">0건</div>
-            </div>
-            <div class="status-2">
-              <div class="status-2-label">의뢰 진행중</div>
-              <div class="status-2-value">0건</div>
-            </div>
-            <div class="status-3">
-              <div class="status-3-label">처리 완료</div>
-              <div class="status-3-value">0건</div>
-            </div>
-            <div class="status-4">
-              <div class="status-4-label">작품 수령</div>
-              <div class="status-4-value">0건</div>
-            </div>
-            <div class="status-5">
-              <div class="status-5-label">의뢰 취소</div>
-              <div class="status-5-value">0건</div>
-            </div>
-          </div>
-          <!-- -- -->
-          <div class="myfage-mid-order-content-filter">
-            <select class="myfage-mid-order-content-filter-current">
-              <option>전체 상태</option>
-              <option id="status-1"></option>
-              <option id="status-2"></option>
-              <option id="status-3"></option>
-              <option id="status-4"></option>
-              <option id="status-5"></option>
-            </select>
-            <input type="date" class="myfage-mid-order-content-filter-start" />
-            <input type="date" class="myfage-mid-order-content-filter-end" />
-          </div>
-          <!-- -- -->
-          <div class="myfage-mid-order-content-list-box">
-            <!-- -- -->
-            <div class="myfage-mid-order-content-list-title">
-              <div class="myfage-mid-order-content-list-title-order-num">
-                의뢰번호
-              </div>
-              <div class="myfage-mid-order-content-list-title-order-nickname">
-                작가명
-              </div>
-              <div class="myfage-mid-order-content-list-title-order-cost">
-                결제금액
-              </div>
-              <div class="myfage-mid-order-content-list-title-order-date">
-                주문날짜
-              </div>
-              <div class="myfage-mid-order-content-list-title-order-deadline">
-                마감기한
-              </div>
-              <div class="myfage-mid-order-content-list-title-order-status">
-                주문상태
-              </div>
-            </div>
-            <!-- -- -->
-            <div class="myfage-mid-order-content-list-value">
-              <div class="myfage-mid-order-content-list-value-order-num">1</div>
-              <div class="myfage-mid-order-content-list-value-order-nickname">
-                asdras
-              </div>
-              <div class="myfage-mid-order-content-list-value-order-cost">
-                200,000
-              </div>
-              <div class="myfage-mid-order-content-list-value-order-date">
-                2023-09-26
-              </div>
-              <div class="myfage-mid-order-content-list-value-order-deadline">
-                2023-09-26
-              </div>
-              <div class="myfage-mid-order-content-list-value-order-status">
-                의뢰 신청
-              </div>
-            </div>
-            <!-- -- -->
-          </div>
-        </div>
-        <!-- -- -->
+<!--        &lt;!&ndash; &#45;&#45; &ndash;&gt;-->
+<!--        <div class="myfage-mid-order-content">-->
+<!--          &lt;!&ndash; &#45;&#45; &ndash;&gt;-->
+<!--          <div class="myfage-mid-order-content-nav">-->
+<!--            <div class="myfage-mid-order-content-type-req">의뢰관리</div>-->
+<!--            <div class="myfage-mid-order-content-type-art">작업관리</div>-->
+<!--          </div>-->
+<!--          &lt;!&ndash; &#45;&#45; &ndash;&gt;-->
+<!--          <div class="myfage-mid-order-content-status">-->
+<!--            <div class="status-1">-->
+<!--              <div class="status-1-label">의뢰 신청</div>-->
+<!--              <div class="status-1-value">0건</div>-->
+<!--            </div>-->
+<!--            <div class="status-2">-->
+<!--              <div class="status-2-label">의뢰 진행중</div>-->
+<!--              <div class="status-2-value">0건</div>-->
+<!--            </div>-->
+<!--            <div class="status-3">-->
+<!--              <div class="status-3-label">처리 완료</div>-->
+<!--              <div class="status-3-value">0건</div>-->
+<!--            </div>-->
+<!--            <div class="status-4">-->
+<!--              <div class="status-4-label">작품 수령</div>-->
+<!--              <div class="status-4-value">0건</div>-->
+<!--            </div>-->
+<!--            <div class="status-5">-->
+<!--              <div class="status-5-label">의뢰 취소</div>-->
+<!--              <div class="status-5-value">0건</div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          &lt;!&ndash; &#45;&#45; &ndash;&gt;-->
+<!--          <div class="myfage-mid-order-content-filter">-->
+<!--            <select class="myfage-mid-order-content-filter-current">-->
+<!--              <option>전체 상태</option>-->
+<!--              <option id="status-1"></option>-->
+<!--              <option id="status-2"></option>-->
+<!--              <option id="status-3"></option>-->
+<!--              <option id="status-4"></option>-->
+<!--              <option id="status-5"></option>-->
+<!--            </select>-->
+<!--            <input type="date" class="myfage-mid-order-content-filter-start" />-->
+<!--            <input type="date" class="myfage-mid-order-content-filter-end" />-->
+<!--          </div>-->
+<!--          &lt;!&ndash; &#45;&#45; &ndash;&gt;-->
+<!--          <div class="myfage-mid-order-content-list-box">-->
+<!--            &lt;!&ndash; &#45;&#45; &ndash;&gt;-->
+<!--            <div class="myfage-mid-order-content-list-title">-->
+<!--              <div class="myfage-mid-order-content-list-title-order-num">-->
+<!--                의뢰번호-->
+<!--              </div>-->
+<!--              <div class="myfage-mid-order-content-list-title-order-nickname">-->
+<!--                작가명-->
+<!--              </div>-->
+<!--              <div class="myfage-mid-order-content-list-title-order-cost">-->
+<!--                결제금액-->
+<!--              </div>-->
+<!--              <div class="myfage-mid-order-content-list-title-order-date">-->
+<!--                주문날짜-->
+<!--              </div>-->
+<!--              <div class="myfage-mid-order-content-list-title-order-deadline">-->
+<!--                마감기한-->
+<!--              </div>-->
+<!--              <div class="myfage-mid-order-content-list-title-order-status">-->
+<!--                주문상태-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            &lt;!&ndash; &#45;&#45; &ndash;&gt;-->
+<!--            <div class="myfage-mid-order-content-list-value">-->
+<!--              <div class="myfage-mid-order-content-list-value-order-num">1</div>-->
+<!--              <div class="myfage-mid-order-content-list-value-order-nickname">-->
+<!--                asdras-->
+<!--              </div>-->
+<!--              <div class="myfage-mid-order-content-list-value-order-cost">-->
+<!--                200,000-->
+<!--              </div>-->
+<!--              <div class="myfage-mid-order-content-list-value-order-date">-->
+<!--                2023-09-26-->
+<!--              </div>-->
+<!--              <div class="myfage-mid-order-content-list-value-order-deadline">-->
+<!--                2023-09-26-->
+<!--              </div>-->
+<!--              <div class="myfage-mid-order-content-list-value-order-status">-->
+<!--                의뢰 신청-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            &lt;!&ndash; &#45;&#45; &ndash;&gt;-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; &#45;&#45; &ndash;&gt;-->
+
+
       </div>
       <div class="myfage-right"></div>
+
     </container>
     <div class="modal" style="display: none">
       <h5 class="modal-top">
