주문관리 검색 기능 추가 및 리스트 출력 수정

--- a/src/main/resources/static/myfage.html
+++ b/src/main/resources/static/myfage.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>myfage</title>
-    <script async src="./js/nav.js"></script>
+    <script defer src="./js/nav.js"></script>
     <script async src="./js/footer.js"></script>
     <script async src="./js/all.js"></script>
     <script async src="./js/myfage-nav.js"></script>
-    <script async src="./js/myfage-mid-chat.js"></script>
-    <script async src="./js/myfage-right-chat.js"></script>
     <script async src="./js/myfage-mid-order.js"></script>
     <script async src="./js/myfage-mid-info.js"></script>
+    <script async src="./js/myfage-mid-chat.js"></script>
     <script async src="./js/myfage-mid-article.js"></script>
     <script async src="./js/myfage-right-info.js"></script>
+    <script async src="./js/myfage-right-chat.js"></script>
     <script async src="./js/myfage-right-article.js"></script>
     <script defer src="./js/myfage-delete-article.js"></script>
     <script defer src="./js/myfage-modify-article.js"></script>
